--- a/sos_app 2/sample/pubspec.yaml
+++ b/sos_app 2/sample/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.3
 
     #sdk: flutter
   url_launcher: ^6.0.12  # Add the latest version of the url_launcher package
@@ -64,6 +65,7 @@ flutter:
     - assets/background_image.jpg
     - assets/background_image2.jpg
     - assets/background_image3.jpg
+    - assets/image_123.jpg
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
