--- a/sos_app 2/sample/pubspec.yaml
+++ b/sos_app 2/sample/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.15.3
+  google_sign_in: ^6.2.1
+  firebase_database: ^10.3.8
+  cloud_firestore: ^4.13.6
+
 
 dev_dependencies:
   flutter_test:
