--- a/sos-app/pubspec.yaml
+++ b/sos-app/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   url_launcher: ^6.2.2
   geolocator: ^10.1.0
+  firebase_auth: ^4.16.0
+
+  carousel_slider: ^4.0.0
+  curved_navigation_bar: ^1.0.3
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +62,7 @@ flutter:
     - android/app/src/main/res/mipmap-hdpi/icon.png
     - android/app/src/main/res/mipmap-xhdpi/icon.png
     - android/app/src/main/res/mipmap-xxhdpi/icon.png
+    - assets/signin.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
